# template-cmake-project

./: .clang-format  CMakeLists.txt  README.md  actual-README.md  annotated.html  annotated_dup.js  classes.html  classfoo_1_1Counter-members.html  classfoo_1_1Counter.html  classfoo_1_1Counter.js  dir_000000_000005.html  dir_000004_000005.html  dir_000005_000002.html  dir_000006_000002.html  dir_031c4fc26031de218e3c67acfca35073.html  dir_031c4fc26031de218e3c67acfca35073.js  dir_031c4fc26031de218e3c67acfca35073_dep.dot  dir_031c4fc26031de218e3c67acfca35073_dep.map  dir_031c4fc26031de218e3c67acfca35073_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_8156d74b028a4f82dac7eabab267c398.html  dir_8156d74b028a4f82dac7eabab267c398_dep.map  dir_97ad83a8c99cd02dc7c96faabd2cafb3.html  dir_97ad83a8c99cd02dc7c96faabd2cafb3.js  dir_97ad83a8c99cd02dc7c96faabd2cafb3_dep.dot  dir_97ad83a8c99cd02dc7c96faabd2cafb3_dep.map  dir_97ad83a8c99cd02dc7c96faabd2cafb3_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_dfd90883100e695f9a751d95fe944b8e.html  dir_dfd90883100e695f9a751d95fe944b8e.js  dir_dfd90883100e695f9a751d95fe944b8e_dep.map  dir_dfd90883100e695f9a751d95fe944b8e_dep.md5  dir_e68e8157741866f444e17edd764ebbae.html  files.html  fooConfig.cmake.in  (+40 more)
.github/workflows/: cmake-build-doc.yaml  cmake-run-tests.yaml  install-gtest.sh
cmake/: clang-format.cmake  fooConfig.cmake.in
doc/: CMakeLists.txt  doxyfile.in
include/foo/: foo.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  classes_0.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
src/foo/: foo.cpp
test/: CMakeLists.txt  test_fixture.cpp  test_foo.cpp
